[gd_scene load_steps=9 format=3 uid="uid://cqtxy0mlau6wc"]

[ext_resource type="PackedScene" uid="uid://olunq2dnys21" path="res://Scenes/Levels/Screens/Cut_Out_Animation.tscn" id="1_djymj"]
[ext_resource type="FontFile" uid="uid://ix5p8my5h1s5" path="res://textures/Fonts/upheavtt.ttf" id="1_fg7rd"]
[ext_resource type="Script" path="res://Scenes/Levels/Screens/pause_menu.gd" id="1_yo8u3"]
[ext_resource type="PackedScene" uid="uid://bq4tubvsud5s7" path="res://Scenes/Levels/Screens/Texture_Button.tscn" id="3_jfana"]
[ext_resource type="AudioStream" uid="uid://p01iqgnex4l1" path="res://Sounds/blipSelect.wav" id="4_w5khu"]
[ext_resource type="AudioStream" uid="uid://b2scdilkcbecu" path="res://Sounds/click.wav" id="5_vamo5"]
[ext_resource type="AudioStream" uid="uid://cs1tr14c74y5i" path="res://Sounds/transition.wav" id="6_35dgq"]

[sub_resource type="LabelSettings" id="LabelSettings_tyhml"]
font = ExtResource("1_fg7rd")
font_size = 32
shadow_size = 2
shadow_color = Color(0.156863, 0.160784, 0.207843, 1)
shadow_offset = Vector2(2, 2)

[node name="PauseMenu" type="Node2D"]
process_mode = 2
script = ExtResource("1_yo8u3")

[node name="CutOutAnimation" parent="." instance=ExtResource("1_djymj")]
z_index = 2
custom_minimum_size = Vector2(500, 290)
offset_left = -10.0
offset_top = -10.0
offset_right = 490.0
offset_bottom = 280.0

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 270.0
color = Color(0, 0, 0, 0.494118)

[node name="SelectSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_w5khu")

[node name="ConfirmSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_vamo5")

[node name="TransitionSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_35dgq")
volume_db = -5.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_right = 480.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(480, 200)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_tyhml")

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(480, 30)
layout_mode = 2

[node name="Resume" parent="VBoxContainer/CenterContainer2" instance=ExtResource("3_jfana")]
custom_minimum_size = Vector2(480, 30)
layout_mode = 2
text = "RESUME"

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(480, 30)
layout_mode = 2

[node name="MainMenu" parent="VBoxContainer/CenterContainer3" instance=ExtResource("3_jfana")]
custom_minimum_size = Vector2(480, 30)
layout_mode = 2
text = "MAIN MENU"

[connection signal="animation_finished" from="CutOutAnimation/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer3/MainMenu" to="." method="_on_main_menu_pressed"]

[editable path="CutOutAnimation"]
